Alignment Fixes

--- a/src/app.css
+++ b/src/app.css
@@ -41,3 +41,27 @@ html {
 
   cursor: not-allowed !important;
 }
+
+  
+.hover-display {
+  z-index: 3;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  padding: 0.2em 0.3em;
+
+  width: 100%;
+  height: 0;
+
+  font-size: 0.7em;
+
+  transition: height 0.3s ease;
+
+  cursor: pointer;
+}
